--- a/frontend/index.html
+++ b/frontend/index.html
@@ -198,3 +198,4 @@
     </div>
 </body>
 </html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
